--- a/style.css
+++ b/style.css
@@ -1,11 +1,71 @@
-.nav-logo {
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Nav */
+header {
     display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 20px 50px;
+    height: 64px;
 }
-.nav-links {
+
+header img {
+    height: 32px;
+}
+
+.nav-logo{
     display: inline-flex;
-    
+    margin-right: auto;
 }
-.nav-linklist {
-display: flex;
-justify-content: end;
+
+.nav-linklist li{
+list-style: none;
+display: inline-block;
+padding: 0 16px;
+}
+
+.nav-linklist li a {
+    text-decoration: none;
+    color: rgb(99, 99, 99);
+}
+/* Banner */
+.banner {
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: lightgray;
+    width: 100%;
+}
+.banner img {
+    padding: 32px 24px;
+    width: 60%;;
+}
+.banner-text {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+}
+.banner a {
+    text-decoration: none;
+    color: white;
+    border: solid 1px rgb(99, 99, 99);
+    background-color: rgb(99, 99, 99);
+    padding: 8px 3rem;
+    max-width: 3rem;
+}
+/* Events body */
+.events-body{
+    display: inline-flex;
+    flex-direction: row;
+}
+/* .events-body-highlight {
+    width: 60%;
+    padding: 32px 24px;
+} */
+.events-body-side{
+    width: 40%;
 }
