--- a/style.css
+++ b/style.css
@@ -62,10 +62,99 @@ padding: 0 16px;
     display: inline-flex;
     flex-direction: row;
 }
-/* .events-body-highlight {
+.events-body-highlight{
+    display: flex;
+    flex-direction: column;
     width: 60%;
     padding: 32px 24px;
-} */
+}
 .events-body-side{
+    display: flex;
+    flex-direction: column;
     width: 40%;
+}
+.events-body-side-box {
+display: inline-flex;
+flex-direction: row;
+align-items: center;
+padding: 32px 0;
+}
+.events-body-side-box img {
+    height: auto;
+    width: 35%;
+    padding: 0 16px;
+}
+.side-box-text {
+    width: 65%;
+}
+/* Start Learning Body */
+/* .learn-card-grid {
+    display: flex;
+    flex-wrap: wrap;
+}
+.learn-card-grid > * {
+    flex: 0 1 33%;
+} */
+.courses{
+    background-color: lightgray;
+    width: 100%;
+}
+.learn-card-grid {
+    display: grid;
+    grid-template: repeat(3, 1fr), repeat(3,1fr);
+    column-gap: 32px;
+    row-gap: 32px;
+    width: 100%;
+    margin: 32px 72px;
+}
+.learn-card img {
+    height: auto;
+}
+.learn-card h3 {
+    margin-top: 16px;
+    margin-left: 16px;
+}
+.learn-card p{
+margin: 8px 16px;
+}
+
+.Csoftware {
+    grid-area: 1 / 1;
+}
+.CcompArt {
+    grid-area: 1/2;
+}
+.Cdesign {
+    grid-area: 1/3;
+}
+.Cdata {
+    grid-area: 2 /1;
+}
+.Cbusiness {
+    grid-area: 2/2;
+}
+.Cmarketing {
+    grid-area: 2/3;
+}
+/* Video */
+.thesis-body h2 {
+    width: 100%;
+    margin: 0 auto;
+}
+video {
+    width: 100%;
+}
+
+/* Footer */
+footer {
+    display: flex;
+    justify-content: space-between;
+}
+footer ul {
+    list-style: none;
+}
+footer a {
+    display: inline-block;
+    text-decoration: none;
+    color: darkgray;
 }
